# cities_cdnvideo

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/api_v1/routes/: cities.py
app/api/dependencies/: cache.py
app/cache/: redis_client.py
app/core/: config.py  errors.py
app/core/settings/: app.py  redis.py
app/schemas/: city.py
app/servecies/: __init__.py  cities.py  graphhopper.py  utils.py
